#10 Fix bug hidden content under scrollbar

--- a/src/warp.scss
+++ b/src/warp.scss
@@ -5,7 +5,7 @@ $gradient-darker-darker: #002f4d;
 .warp-menu-container {
   position: fixed;
   z-index: 9996;
-  top: 0;
+  bottom: 0;
   right: 0;
   height: 100vh;
   width: 100vw;
@@ -404,10 +404,6 @@ $gradient-darker-darker: #002f4d;
         float: right;
         border-bottom: 1px solid $brand-primary;
         padding: 0.125em 0.5em;
-      }
-
-      a.scrollbar-warpbtn {
-        height: 50px;
       }
     }
 
